# Android-FFmpeg-NDK-Examples

./: README.md  settings.gradle
android-ffmpeg-decoder/: build.gradle
android-ffmpeg-decoder/src/androidTest/java/com/itdog/decoder/: ExampleInstrumentedTest.java
android-ffmpeg-decoder/src/main/: AndroidManifest.xml
android-ffmpeg-decoder/src/main/cpp/: H264Decoder.cpp  H264Decoder.h  H264YUV_Frame.cpp  H264YUV_Frame.h  MyLog.h  com_itdog_decoder_NativeBridge.h  native-lib.cpp
android-ffmpeg-decoder/src/main/java/com/itdog/decoder/: MainActivity.java  NativeBridge.java
android-ffmpeg-decoder/src/main/res/layout/: main.xml
android-ffmpeg-decoder/src/main/res/values/: strings.xml
android-ffmpeg-decoder/src/test/java/com/itdog/decoder/: ExampleUnitTest.java
android-ffmpeg-helloworld/: CMakeLists.txt  build.gradle  proguard-rules.pro
android-ffmpeg-helloworld/src/androidTest/java/com/itdog/ffmpegdemo/: ExampleInstrumentedTest.java
android-ffmpeg-helloworld/src/main/: AndroidManifest.xml
android-ffmpeg-helloworld/src/main/cpp/: com_itdog_ffmpegdemo_NativeBridge.h  native-lib.cpp
android-ffmpeg-helloworld/src/main/java/com/itdog/ffmpegdemo/: MainActivity.java  NativeBridge.java
android-ffmpeg-helloworld/src/main/res/layout/: activity_main.xml
android-ffmpeg-helloworld/src/test/java/com/itdog/ffmpegdemo/: ExampleUnitTest.java
android-ffmpeg-pushflow/: build.gradle
android-ffmpeg-pushflow/src/androidTest/java/com/itdog/pushflow/: ExampleInstrumentedTest.java
android-ffmpeg-pushflow/src/main/: AndroidManifest.xml
android-ffmpeg-pushflow/src/main/cpp/: com_itdog_pushflow_NativeBridge.h  native-lib.cpp
android-ffmpeg-pushflow/src/main/java/com/itdog/pushflow/: MainActivity.java  NativeBridge.java
android-ffmpeg-pushflow/src/main/res/layout/: main.xml
android-ffmpeg-pushflow/src/main/res/values/: strings.xml
android-ffmpeg-pushflow/src/test/java/com/itdog/pushflow/: ExampleUnitTest.java
android-ffmpeg-recordvideo/: CMakeLists.txt  build.gradle
android-ffmpeg-recordvideo/src/androidTest/java/com/itdog/recordvideo/: ExampleInstrumentedTest.java
android-ffmpeg-recordvideo/src/main/: AndroidManifest.xml
android-ffmpeg-recordvideo/src/main/cpp/: com_itdog_recordvideo_NativeBridge.h  main.cpp
android-ffmpeg-recordvideo/src/main/java/com/itdog/recordvideo/: MainActivity.java  NativeBridge.java
android-ffmpeg-recordvideo/src/main/res/layout/: main.xml
android-ffmpeg-recordvideo/src/main/res/values/: strings.xml
android-ffmpeg-recordvideo/src/test/java/com/itdog/recordvideo/: ExampleUnitTest.java
android-ffmpeg-videoplayer/: CMakeLists.txt  build.gradle
android-ffmpeg-videoplayer/src/androidTest/java/com/itdog/android_ffmpeg_videoplayer/: ExampleInstrumentedTest.java
android-ffmpeg-videoplayer/src/main/: AndroidManifest.xml
android-ffmpeg-videoplayer/src/main/cpp/: App.cpp  com_itdog_android_ffmpeg_videoplayer_VideoPlayer.h
android-ffmpeg-videoplayer/src/main/java/com/itdog/android_ffmpeg_videoplayer/: MainActivity.java  VideoPlayer.java
android-ffmpeg-videoplayer/src/main/res/values/: strings.xml
android-ffmpeg-videoplayer/src/test/java/com/itdog/android_ffmpeg_videoplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
